--- a/work.css
+++ b/work.css
@@ -19,12 +19,15 @@ img {
 
 .features {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 10px;
+  padding-left: 55px;
+  padding-right: 55px;
+  overflow: hidden;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .feature {
-  background: white;
+  background:#fdf5a7;
   padding: 10px;
   border: 1px solid white;
   text-align: center;
